--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,309 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.8.6
+aiosignal==1.3.2
+akshare==1.15.53
+alibabacloud-bailian20230601==1.6.1
+alibabacloud-tea==0.4.0
+alibabacloud_credentials==0.3.6
+alibabacloud_endpoint_util==0.0.3
+alibabacloud_gateway_spi==0.0.2
+alibabacloud_openapi_util==0.2.2
+alibabacloud_tea_openapi==0.3.12
+alibabacloud_tea_util==0.3.13
+alibabacloud_tea_xml==0.0.2
+annotated-types==0.7.0
+anthropic==0.42.0
+anyio==4.7.0
+APScheduler==3.11.0
+arxiv==2.1.3
+asttokens==3.0.0
+async-timeout==4.0.3
+attrs==24.3.0
+azure-cognitiveservices-speech==1.41.1
+backports.tarfile==1.2.0
+baidu-aip==4.16.13
+beautifulsoup4==4.12.3
+broadscope_bailian==1.3.1
+cachetools==5.5.0
+certifi==2024.12.14
+cffi==1.17.1
+cfgv==3.4.0
+chardet==5.2.0
+charset-normalizer==3.4.0
+chatgpt-tool-hub==0.5.0
+cheroot==10.0.1
+click==8.1.8
+cryptography==44.0.0
+curl_cffi==0.7.4
+dashscope==1.20.14
+decorator==5.1.1
+dingtalk-stream==0.20.0
+distlib==0.3.9
+distro==1.9.0
+dulwich==0.22.7
+edge-tts==7.0.0
+elevenlabs==1.0.3
+et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+executing==2.1.0
+feedparser==6.0.11
+filelock==3.16.1
+frozenlist==1.5.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.24.0
+google-api-python-client==2.156.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.68.1
+gTTS==2.5.4
+h11==0.14.0
+html5lib==1.1
+HTMLParser==0.0.2
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+identify==2.6.3
+idna==3.10
+ipython==8.18.1
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jedi==0.19.2
+jiter==0.8.2
+jsonpath==0.82.2
+langid==1.1.6
+linkai==0.0.6.0
+loguru==0.7.3
+lxml==5.3.0
+markdown-it-py==3.0.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mini-racer==0.12.4
+more-itertools==10.5.0
+multidict==6.1.0
+nodeenv==1.9.1
+numpy==1.24.2
 openai==0.27.8
-HTMLParser>=0.0.2
+openpyxl==3.1.5
+optionaldict==0.1.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.0.0
+platformdirs==4.3.6
+pre_commit==4.0.1
+prompt_toolkit==3.0.48
+propcache==0.2.1
+proto-plus==1.25.0
+protobuf==5.29.2
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.5.3
+pydantic_core==2.14.6
+pydub==0.25.1
+Pygments==2.18.0
+PyJWT==2.8.0
+pyobjc==10.3.2
+pyobjc-core==10.3.2
+pyobjc-framework-Accessibility==10.3.2
+pyobjc-framework-Accounts==10.3.2
+pyobjc-framework-AddressBook==10.3.2
+pyobjc-framework-AdServices==10.3.2
+pyobjc-framework-AdSupport==10.3.2
+pyobjc-framework-AppleScriptKit==10.3.2
+pyobjc-framework-AppleScriptObjC==10.3.2
+pyobjc-framework-ApplicationServices==10.3.2
+pyobjc-framework-AppTrackingTransparency==10.3.2
+pyobjc-framework-AudioVideoBridging==10.3.2
+pyobjc-framework-AuthenticationServices==10.3.2
+pyobjc-framework-AutomaticAssessmentConfiguration==10.3.2
+pyobjc-framework-Automator==10.3.2
+pyobjc-framework-AVFoundation==10.3.2
+pyobjc-framework-AVKit==10.3.2
+pyobjc-framework-AVRouting==10.3.2
+pyobjc-framework-BackgroundAssets==10.3.2
+pyobjc-framework-BrowserEngineKit==10.3.2
+pyobjc-framework-BusinessChat==10.3.2
+pyobjc-framework-CalendarStore==10.3.2
+pyobjc-framework-CallKit==10.3.2
+pyobjc-framework-CFNetwork==10.3.2
+pyobjc-framework-Cinematic==10.3.2
+pyobjc-framework-ClassKit==10.3.2
+pyobjc-framework-CloudKit==10.3.2
+pyobjc-framework-Cocoa==10.3.2
+pyobjc-framework-Collaboration==10.3.2
+pyobjc-framework-ColorSync==10.3.2
+pyobjc-framework-Contacts==10.3.2
+pyobjc-framework-ContactsUI==10.3.2
+pyobjc-framework-CoreAudio==10.3.2
+pyobjc-framework-CoreAudioKit==10.3.2
+pyobjc-framework-CoreBluetooth==10.3.2
+pyobjc-framework-CoreData==10.3.2
+pyobjc-framework-CoreHaptics==10.3.2
+pyobjc-framework-CoreLocation==10.3.2
+pyobjc-framework-CoreMedia==10.3.2
+pyobjc-framework-CoreMediaIO==10.3.2
+pyobjc-framework-CoreMIDI==10.3.2
+pyobjc-framework-CoreML==10.3.2
+pyobjc-framework-CoreMotion==10.3.2
+pyobjc-framework-CoreServices==10.3.2
+pyobjc-framework-CoreSpotlight==10.3.2
+pyobjc-framework-CoreText==10.3.2
+pyobjc-framework-CoreWLAN==10.3.2
+pyobjc-framework-CryptoTokenKit==10.3.2
+pyobjc-framework-DataDetection==10.3.2
+pyobjc-framework-DeviceCheck==10.3.2
+pyobjc-framework-DictionaryServices==10.3.2
+pyobjc-framework-DiscRecording==10.3.2
+pyobjc-framework-DiscRecordingUI==10.3.2
+pyobjc-framework-DiskArbitration==10.3.2
+pyobjc-framework-DVDPlayback==10.3.2
+pyobjc-framework-EventKit==10.3.2
+pyobjc-framework-ExceptionHandling==10.3.2
+pyobjc-framework-ExecutionPolicy==10.3.2
+pyobjc-framework-ExtensionKit==10.3.2
+pyobjc-framework-ExternalAccessory==10.3.2
+pyobjc-framework-FileProvider==10.3.2
+pyobjc-framework-FileProviderUI==10.3.2
+pyobjc-framework-FinderSync==10.3.2
+pyobjc-framework-FSEvents==10.3.2
+pyobjc-framework-GameCenter==10.3.2
+pyobjc-framework-GameController==10.3.2
+pyobjc-framework-GameKit==10.3.2
+pyobjc-framework-GameplayKit==10.3.2
+pyobjc-framework-HealthKit==10.3.2
+pyobjc-framework-ImageCaptureCore==10.3.2
+pyobjc-framework-InputMethodKit==10.3.2
+pyobjc-framework-InstallerPlugins==10.3.2
+pyobjc-framework-InstantMessage==10.3.2
+pyobjc-framework-Intents==10.3.2
+pyobjc-framework-IntentsUI==10.3.2
+pyobjc-framework-IOBluetooth==10.3.2
+pyobjc-framework-IOBluetoothUI==10.3.2
+pyobjc-framework-IOSurface==10.3.2
+pyobjc-framework-iTunesLibrary==10.3.2
+pyobjc-framework-KernelManagement==10.3.2
+pyobjc-framework-LatentSemanticMapping==10.3.2
+pyobjc-framework-LaunchServices==10.3.2
+pyobjc-framework-libdispatch==10.3.2
+pyobjc-framework-libxpc==10.3.2
+pyobjc-framework-LinkPresentation==10.3.2
+pyobjc-framework-LocalAuthentication==10.3.2
+pyobjc-framework-LocalAuthenticationEmbeddedUI==10.3.2
+pyobjc-framework-MailKit==10.3.2
+pyobjc-framework-MapKit==10.3.2
+pyobjc-framework-MediaAccessibility==10.3.2
+pyobjc-framework-MediaLibrary==10.3.2
+pyobjc-framework-MediaPlayer==10.3.2
+pyobjc-framework-MediaToolbox==10.3.2
+pyobjc-framework-Metal==10.3.2
+pyobjc-framework-MetalFX==10.3.2
+pyobjc-framework-MetalKit==10.3.2
+pyobjc-framework-MetalPerformanceShaders==10.3.2
+pyobjc-framework-MetalPerformanceShadersGraph==10.3.2
+pyobjc-framework-MetricKit==10.3.2
+pyobjc-framework-MLCompute==10.3.2
+pyobjc-framework-ModelIO==10.3.2
+pyobjc-framework-MultipeerConnectivity==10.3.2
+pyobjc-framework-NaturalLanguage==10.3.2
+pyobjc-framework-NetFS==10.3.2
+pyobjc-framework-Network==10.3.2
+pyobjc-framework-NetworkExtension==10.3.2
+pyobjc-framework-NotificationCenter==10.3.2
+pyobjc-framework-OpenDirectory==10.3.2
+pyobjc-framework-OSAKit==10.3.2
+pyobjc-framework-OSLog==10.3.2
+pyobjc-framework-PassKit==10.3.2
+pyobjc-framework-PencilKit==10.3.2
+pyobjc-framework-PHASE==10.3.2
+pyobjc-framework-Photos==10.3.2
+pyobjc-framework-PhotosUI==10.3.2
+pyobjc-framework-PreferencePanes==10.3.2
+pyobjc-framework-PushKit==10.3.2
+pyobjc-framework-Quartz==10.3.2
+pyobjc-framework-QuickLookThumbnailing==10.3.2
+pyobjc-framework-ReplayKit==10.3.2
+pyobjc-framework-SafariServices==10.3.2
+pyobjc-framework-SafetyKit==10.3.2
+pyobjc-framework-SceneKit==10.3.2
+pyobjc-framework-ScreenCaptureKit==10.3.2
+pyobjc-framework-ScreenSaver==10.3.2
+pyobjc-framework-ScreenTime==10.3.2
+pyobjc-framework-ScriptingBridge==10.3.2
+pyobjc-framework-SearchKit==10.3.2
+pyobjc-framework-Security==10.3.2
+pyobjc-framework-SecurityFoundation==10.3.2
+pyobjc-framework-SecurityInterface==10.3.2
+pyobjc-framework-SensitiveContentAnalysis==10.3.2
+pyobjc-framework-ServiceManagement==10.3.2
+pyobjc-framework-SharedWithYou==10.3.2
+pyobjc-framework-SharedWithYouCore==10.3.2
+pyobjc-framework-ShazamKit==10.3.2
+pyobjc-framework-Social==10.3.2
+pyobjc-framework-SoundAnalysis==10.3.2
+pyobjc-framework-Speech==10.3.2
+pyobjc-framework-SpriteKit==10.3.2
+pyobjc-framework-StoreKit==10.3.2
+pyobjc-framework-Symbols==10.3.2
+pyobjc-framework-SyncServices==10.3.2
+pyobjc-framework-SystemConfiguration==10.3.2
+pyobjc-framework-SystemExtensions==10.3.2
+pyobjc-framework-ThreadNetwork==10.3.2
+pyobjc-framework-UniformTypeIdentifiers==10.3.2
+pyobjc-framework-UserNotifications==10.3.2
+pyobjc-framework-UserNotificationsUI==10.3.2
+pyobjc-framework-VideoSubscriberAccount==10.3.2
+pyobjc-framework-VideoToolbox==10.3.2
+pyobjc-framework-Virtualization==10.3.2
+pyobjc-framework-Vision==10.3.2
+pyobjc-framework-WebKit==10.3.2
+pyOpenSSL==24.3.0
+pyparsing==3.2.0
+pypng==0.20220715.0
 PyQRCode==1.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pyttsx3==2.98
+pytz==2024.2
+PyYAML==6.0.2
 qrcode==7.4.2
-requests>=2.28.2
-chardet>=5.1.0
-Pillow
-pre-commit
-web.py
-linkai>=0.0.6.0
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rsa==4.9
+schedule==1.2.2
+sgmllib3k==1.0.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+SpeechRecognition==3.12.0
+srt==3.5.3
+stack-data==0.6.3
+tabulate==0.9.0
+tenacity==8.2.3
+tiktoken==0.4.0
+tqdm==4.67.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
+uritemplate==4.1.1
+urllib3==2.3.0
+virtualenv==20.28.0
+wcwidth==0.2.13
+web.py==0.62
+webencodings==0.5.1
+websocket-client==1.2.0
+websockets==14.1
+wechatpy==1.8.18
+wikipedia==1.4.0
+wolframalpha==5.1.3
+xlrd==2.0.1
+xmltodict==0.14.2
+yarl==1.18.3
+zhipuai==2.1.5.20241204
